Fixed the contact form for iphones

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </div>
         <footer>
             <div id="footer_text">
-                This portfolio was made with <span class="highlight2">Sublime&nbsp;Text&nbsp;2</span> and <span class="highlight2">Photoshop/Illustrator&nbsp;CS5.</span><br /><span class="highlight2">Google</span>, <span class="highlight2">YouTube</span>, and <span class="highlight2">Stack&nbsp;Overflow</span> helped quite a bit as well.<br />
+                This portfolio was made with <span class="highlight2">Sublime&nbsp;Text&nbsp;2</span> and <span class="highlight2">Photoshop/Illustrator&nbsp;CS5.</span><br /><span class="highlight2">Google</span>, <span class="highlight2">YouTube</span>, and <span class="highlight2">Stack&nbsp;Overflow</span> helped quite a bit as&nbsp;well.<br />
                 &copy;2015. All rights reserved.
             </div>
         </footer>
