Added Github link to Contact section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                 <h1 id="contact">Get in touch</h1>
                 
-                <p>I am currently looking for new career opportunities around the Front Range. Please don't hesitate to get in&nbsp;touch.<br /><br />And come find me on <a href="https://www.linkedin.com/pub/dmitriy-gabriel/37/aaa/2b3" target="_blank" class="LinkedIn">LinkedIn</a>&nbsp;as&nbsp;well.</p>
+                <p>I am currently looking for new career opportunities around the Front Range. Please don't hesitate to get in&nbsp;touch.<br /><br />And come find me on <a href="https://github.com/dgabriel14888" target="_blank" class="LinkedIn">Github</a> and <a href="https://www.linkedin.com/pub/dmitriy-gabriel/37/aaa/2b3" target="_blank" class="LinkedIn">LinkedIn</a>&nbsp;as&nbsp;well.</p>
 
                 <div id="contact_form">
                     <form action="contact.php" method="post" id="ajax">
