Changed form validation code

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 
                 <div id="contact_form">
                     <form action="contact.php" method="post" id="ajax">
-                        <div id="name_validation">Please fill in your&nbsp;name</div>
-                        <div class="form_row"><input type="text" name="name" class="text_field" id="name_field" placeholder="Your name *"></div>
-                        <div id="email_validation">Please fill in your&nbsp;email</div>
-                        <div class="form_row"><input type="text" name="email" class="text_field" id="email_field" placeholder="Your email *"></div>
-                        <div id="message_validation">Please leave me a brief&nbsp;message</div>
-                        <div class="form_row"><textarea name="message" class="text_field" id="message_field" placeholder="Your message *"></textarea></div>
+                        <div id="name_validation">Your&nbsp;name *</div>
+                        <div class="form_row"><input type="text" name="name" class="text_field" id="name_field"></div>
+                        <div id="email_validation">Your&nbsp;email *</div>
+                        <div class="form_row"><input type="text" name="email" class="text_field" id="email_field"></div>
+                        <div id="message_validation">Your&nbsp;message *</div>
+                        <div class="form_row"><textarea name="message" class="text_field" id="message_field"></textarea></div>
                         <div class="button_row"><input type="submit" id="button" value="Send" disabled="disabled"></div>
                         <div id="form_validated">Thank you!</div>
                     </form>
