--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="main.css" type="text/css" />
+        <link rel="stylesheet" href="styles/main.css" type="text/css" />
         <link rel="shortcut icon" href="assets/icon.ico">
         <title>Dmitriy Gabriel - Front End</title>
     </head>
