--- a/samples/Illustrations.html
+++ b/samples/Illustrations.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="../main.css" type="text/css" />
+        <link rel="stylesheet" href="../styles/main.css" type="text/css" />
         <link rel="shortcut icon" href="assets/icon.ico">
         <script src="assets/jquery-1.11.2.min.js" type="text/javascript"></script>
         <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
