Fixed up stylesheet

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 </nav>
             </div>
         </header>
-        <div id="main">
-            <div id="container">
+        <div id="content">
+            <div id="main" role="main">
 
 
                 <!-- ANCHOR -->
