fixed jquery scroll

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <div id="logo"> <a href="http://dmitriygabriel.com/"><img src="assets/logo.png" border="0" alt="Dmitriy Gabriel | Front End" width="400" height="100" /></a> </div>
                 <nav>
                     <ul>
-                        <li><a href="#about_anchor">ABOUT&nbsp;ME</a></li>
-                        <li><a href="#samples_anchor">SAMPLES</a></li>
-                        <li><a href="#contact_anchor">GET&nbsp;IN&nbsp;TOUCH</a></li>
+                        <li><a class="smooth_nav" href="#about_anchor">ABOUT&nbsp;ME</a></li>
+                        <li><a class="smooth_nav" href="#samples_anchor">SAMPLES</a></li>
+                        <li><a class="smooth_nav" href="#contact_anchor">GET&nbsp;IN&nbsp;TOUCH</a></li>
                     </ul>
                 </nav>
             </div>
