Added nbsps and right-aligned items inside hamburger nav

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<a href="samples/PNC"><img src="assets/sample2.jpg" alt="Email Sample 1" class="sample_image" /></a>
 				</div>
 				<div class="col-sm-9">
-					<p class="samples_paragraph">This is an example of a responsive email, done for PNC Bank.</p>
+					<p class="samples_paragraph">This is an example of a responsive email, done for PNC&nbsp;Bank.</p>
 				</div>
 			</div>
 			<hr />
@@ -111,7 +111,7 @@
 					<a href="samples/TIAA"><img src="assets/sample3.jpg" alt="Email Sample 2" class="sample_image" /></a>
 				</div>
 				<div class="col-sm-9">
-					<p class="samples_paragraph">This is another example of a fully responsive email. This one was made for TIAA-CREF.</p>
+					<p class="samples_paragraph">This is another example of a fully responsive email. This one was made for&nbsp;TIAA&#8209;CREF.</p>
 				</div>
 			</div>
 			<hr />
@@ -120,7 +120,7 @@
 					<a href="#collapse_illustrations" data-toggle="collapse"><img src="assets/sample4.jpg" alt="Illustrations" class="sample_image" /></a>
 				</div>
 				<div class="col-sm-9">
-					<p class="samples_paragraph">I'm a big fan of Adobe Illustrator. <a href="#collapse_illustrations" data-toggle="collapse" class="fade_custom">Click</a> to show my doodles.</p>
+					<p class="samples_paragraph">I'm a big fan of Adobe Illustrator. <a href="#collapse_illustrations" data-toggle="collapse" class="fade_custom">Click</a> to show my&nbsp;doodles.</p>
 				</div>
 			</div>
 
