--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 
 	<!-- Contact -->
 	<div class="container">
-		<section class="margin-bottom-60">
+		<section class="margin-bottom-80">
 			<h1>Get In Touch</h1>
 
-            <p>I am currently looking for new career opportunities around the Front Range. Please don't hesitate to get in&nbsp;touch.<br /><br />And come find me on <a href="https://github.com/dgabriel14888" target="_blank" class="fade_all fade_3">Github</a> and <a href="https://www.linkedin.com/pub/dmitriy-gabriel/37/aaa/2b3" target="_blank" class="fade_all fade_3">LinkedIn</a> as&nbsp;well.</p>
+            
 
 
             <div class="row">
@@ -231,6 +231,10 @@
 					</div>
             	</div>
             </div>
+
+            <p>Also, come find me on <a href="https://github.com/dgabriel14888" target="_blank" class="fade_all fade_3">Github</a> and&nbsp;<a href="https://www.linkedin.com/pub/dmitriy-gabriel/37/aaa/2b3" target="_blank" class="fade_all fade_3">LinkedIn</a>.</p>
+
+
 		</section>
 	</div>
 
