Fixed quiz start-over URL

--- a/samples/quiz.html
+++ b/samples/quiz.html
@@ -249,7 +249,7 @@ footer{
       </div>
 
       <p id="message"></p>
-      <p id="reset"><a href="JS_Quiz.html">&raquo; Start over</a></p>
+      <p id="reset"><a href="quiz">&raquo; Start over</a></p>
 
 </div>
 
